# jlens-gguf

./: .gitignore  NOTICE  QUICKSTART.md  README.md  pyproject.toml
jlens_gguf/: __init__.py  __main__.py  cli.py  client.py  fitting.py  lens.py  model_reader.py  pt_convert.py  readout.py  server.py
jlens_gguf/web/: app.js  index.html  style.css
native/: build.sh  jlens_server.cpp  poc_cb.cpp
scripts/: jlens-up
tests/: cdp.py  conftest.py  test_backend.py  test_bridge.py  test_fitting.py  test_lens_io.py  test_moe.py  test_native.py  test_readout.py  test_server_helpers.py  test_ui.py
